src/test/ui/parser/unclosed_delim_mod.stderr
error: unexpected closing delimiter: `}`
  --> $DIR/unclosed_delim_mod.rs:7:1
   |
LL |     Ok(Value {
   |              - this opening brace...
LL |     }
   |     - ...matches this closing brace
LL | }
   | ^ unexpected closing delimiter

error: this file contains an unclosed delimiter
  --> $DIR/unclosed_delim_mod.rs:8:41
   |
LL | pub fn new() -> Result<Value, ()> {
   |                                   - unclosed delimiter
LL |     Ok(Value {
   |       - unclosed delimiter
...
LL |
   |                                         ^

error: this file contains an unclosed delimiter
  --> $DIR/unclosed_delim_mod.rs:8:41
   |
LL | pub fn new() -> Result<Value, ()> {
   |                                   - unclosed delimiter
LL |     Ok(Value {
   |       - unclosed delimiter
...
LL |
   |                                         ^

error: aborting due to 3 previous errors

